logs/dag_id=etl_dag/run_id=manual__2023-10-26T061032.158205+0000/task_id=load_data/attempt=1.log
[2023-10-26T06:10:44.447+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_dag.load_data manual__2023-10-26T06:10:32.158205+00:00 [queued]>
[2023-10-26T06:10:44.462+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_dag.load_data manual__2023-10-26T06:10:32.158205+00:00 [queued]>
[2023-10-26T06:10:44.463+0000] {taskinstance.py:1359} INFO - Starting attempt 1 of 3
[2023-10-26T06:10:44.482+0000] {taskinstance.py:1380} INFO - Executing <Task(PythonOperator): load_data> on 2023-10-26 06:10:32.158205+00:00
[2023-10-26T06:10:44.494+0000] {standard_task_runner.py:57} INFO - Started process 2114 to run task
[2023-10-26T06:10:44.497+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'etl_dag', 'load_data', 'manual__2023-10-26T06:10:32.158205+00:00', '--job-id', '389', '--raw', '--subdir', 'DAGS_FOLDER/tugaskel8_dag.py', '--cfg-path', '/tmp/tmp4p8i_2rj']
[2023-10-26T06:10:44.500+0000] {standard_task_runner.py:85} INFO - Job 389: Subtask load_data
[2023-10-26T06:10:44.566+0000] {task_command.py:415} INFO - Running <TaskInstance: etl_dag.load_data manual__2023-10-26T06:10:32.158205+00:00 [running]> on host d73c1ff20372
[2023-10-26T06:10:44.881+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='kel8' AIRFLOW_CTX_DAG_ID='etl_dag' AIRFLOW_CTX_TASK_ID='load_data' AIRFLOW_CTX_EXECUTION_DATE='2023-10-26T06:10:32.158205+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-10-26T06:10:32.158205+00:00'
[2023-10-26T06:10:44.993+0000] {base.py:73} INFO - Using connection ID 'db_polusiudara' for task execution.
[2023-10-26T06:10:47.668+0000] {sql.py:418} INFO - Running statement: 
        INSERT INTO hands_on_final (id, city, name, entity, country, sources, isMobile, isAnalysis, sensorType, firstUpdated, lastUpdated, measurements)
        VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s,%s, %s)
    , parameters: None
[2023-10-26T06:10:47.745+0000] {taskinstance.py:1935} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/tugaskel8_dag.py", line 54, in load_data
    hook.run("""
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "%"
LINE 3:         VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s,%s, %...
                        ^

[2023-10-26T06:10:47.773+0000] {taskinstance.py:1398} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_dag, task_id=load_data, execution_date=20231026T061032, start_date=20231026T061044, end_date=20231026T061047
[2023-10-26T06:10:47.791+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 389 for task load_data (syntax error at or near "%"
LINE 3:         VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s,%s, %...
                        ^
; 2114)
[2023-10-26T06:10:47.814+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-10-26T06:10:47.835+0000] {taskinstance.py:2776} INFO - 0 downstream tasks scheduled from follow-on schedule check
